@@ -1,5 +1,15 @@
 2008-01-10  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>
 
+	Fixed the bug that EX_TOO_LONG_PAYLOAD exception is thrown if just
+	payload length(4bytes) are received. This happens because lenbufLength
+	is not updated in this particular case and successive call of
+	receiveMessage() overwrites payload length with bytes recieved which
+	are payload body.
+	* src/PeerConnection.cc
+	* src/message.h
+
+2008-01-10  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>
+
 	Fixed the bug that DefaultPeerStorage::returnPeer() may delete wrong
 	peer if there are peers that have same ipaddr and port.
 	I've experiened segmentation fault and "pure virtual function was
